# src/swagger.json
@@ -1,4 +1,3 @@
-
 {
   "swagger": "2.0",
   "info": {
@@ -12,7 +11,6 @@
   },
   "basePath": "/",
   "schemes": [
-    "http",
     "https"
   ],
   "consumes": [
@@ -93,6 +91,25 @@
             "api_key": "$X_API_KEY"
           }
         ]
+      }
+    },
+    "/api/secure/test-data": {
+      "get": {
+        "tags": [
+          "mtls"
+        ],
+        "summary": "Retrieves secure data protected by mTLS",
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       }
     }
   },
